# strawberry-disease

./: .env.example  .gitignore  Makefile  README.md  docker-compose.cvat.yml  docker-compose.labelstudio.yml  docker-compose.training.yml  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 20250116_initial_schema.py
config/: cameras.yaml
cvat/: nginx.conf
cvat/conf.d/: cvat.conf
cvat/import_data/: CVAT_IMPORT_INSTRUCTIONS.md  dataset_statistics.json  test_priority_images.txt  train_priority_images.txt  valid_priority_images.txt
docker/: Dockerfile.aggregator  Dockerfile.api  Dockerfile.base  Dockerfile.collector  Dockerfile.inference  Dockerfile.notifier
examples/: training_examples.py
scripts/: analyze_plantvillage.py  apply_oversampling.py  batch_process_kaggle.py  clean_dataset.py  convert_json_to_yolo.py  convert_to_yolo.py  csv_to_tensorboard.py  download_dataset.sh  download_plantvillage.py  download_roboflow.py  fix_labelstudio_paths.py  generate_yolo_labels.py  init_db.sql  merge_multi_datasets.py  prepare_for_cvat.py  prepare_for_gpu.sh  setup_cvat.sh  setup_grounded_sam2_gpu.sh  setup_labelstudio.sh  test_custom_images.py  train_ensemble.py  train_model.py  validate_cvat_export.py
src/: __init__.py
src/api/: __init__.py  dependencies.py  main.py  schemas.py
src/core/: config.py  logging.py
src/models/: __init__.py  base.py  camera.py  image.py  prediction.py  risk_summary.py
src/services/: __init__.py  camera_collector.py  inference_service.py  risk_aggregator.py  telegram_notifier.py
(+27 files in other folders)
